= ActiveMerchant CHANGELOG

== HEAD
* UsaEpayTransaction: Support UMcheckformat option for echecks [dtykocki] [#3002]

== Version 1.85.0 (September 28, 2018)
* Authorize.Net: Support custom delimiter for cim [curiousepic] [#3001]

== Version 1.84.0 (September 27, 2018)
* PayU Latam: support partial captures [bpollack] #2974
* Braintree: Reflect correct test mode in Braintree responses [elfassy] [#2980]
* FirstPay: Expose error code [curiousepic] #2979
* Barclaycard Smartpay: Pass device_fingerprint when specified [dtykocki] #2981
* Komoju: remove no-longer-relevant sandbox URL [miyazawadegica] #2987
* [POSSIBLE BREAKAGE] Determine credit cards via functions [bpollack] #2983
* Drop support for Laser cards [bpollack] #2983
* Improve Maestro card detection [bpollack] #2983
* Add ROU alpha3 code for Romania [dtykocki] #2989
* [POSSIBLE BREAKAGE] Drop support for Solo and Switch cards [bpollack] #2991
* Add support for Carnet cards [bpollack] #2992
* Stripe: support a reason for voiding a transaction [whitby3001] #2378
* Payeezy: Add reversal_id in support of timeout reversals [dtykocki] #2997
* Stripe: support Level 3 transaction fields [bpollack] #2996
* Conekta: support Carnet cards [bpollack] #2999
* Openpay: support Carnet cards [bpollack] #2999
* Adyen: Add support for GooglePay [dtykocki] #2971

== Version 1.83.0 (August 30, 2018)
* CT Payment: Update How Address is Passed [nfarve] #2960
* Adyen: Add RecurringProcessingModel [nfarve] #2951
* Optimal Payments: update country list [bpollack] #2961
* Ebanx: update sandbox and production URLs [vnbrs] #2949
* Ebanx: support additional countries [vnbrs] #2950
* Gateway generator: fix a typo that would cause the script to crash [bpollack] #2962
* Clearhaus: use $0 for verify transactions [bpollack] #2964
* Global Collect: properly handle partial captures [bpollack] #2967
* Braintree: Add support for GooglePay [dtykocki] [#2966]
* Adyen: allow overriding card brands [bpollack] #2968