@@ -1394,6 +1394,10 @@ Style/SpecialGlobalVars:
 Style/StringLiteralsInInterpolation:
   Enabled: false
 
+Style/StringLiterals:
+  Exclude:
+    - 'test/unit/gateways/global_collect_test.rb'
+
 # Offense count: 307
 # Cop supports --auto-correct.
 # Configuration parameters: EnforcedStyle, MinSize.
@@ -1460,3 +1464,5 @@ Style/ZeroLengthPredicate:
 # URISchemes: http, https
 Metrics/LineLength:
   Max: 2484
+  Exclude:
+    - 'test/unit/gateways/global_collect_test.rb'
