@@ -212,9 +212,26 @@ class GlobalCollectTest < Test::Unit::TestCase
     assert_equal 'Status: REJECTED', response.message
   end
 
+  def test_invalid_raw_response
+    response = stub_comms do
+      @gateway.purchase(@accepted_amount, @credit_card, @options)
+    end.respond_with(invalid_json_response)
+    
+    assert_failure response
+    assert_match %r{^Invalid response received from the Ingenico ePayments}, response.message
+  end
+
   def test_scrub
     assert @gateway.supports_scrubbing?
     assert_equal @gateway.scrub(pre_scrubbed), post_scrubbed
+  end
+
+  def test_scrub_invalid_response
+    response = stub_comms do
+      @gateway.purchase(@accepted_amount, @credit_card, @options)
+    end.respond_with(invalid_json_plus_card_data).message
+    
+    assert_equal @gateway.scrub(response), scrubbed_invalid_json_plus
   end
 
   private
@@ -373,5 +390,45 @@ class GlobalCollectTest < Test::Unit::TestCase
 
   def failed_verify_response
     %({\n   \"errorId\" : \"cee09c50-5d9d-41b8-b740-8c7bf06d2c66\",\n   \"errors\" : [ {\n      \"code\" : \"430330\",\n      \"message\" : \"Not authorised\"\n   } ],\n   \"paymentResult\" : {\n      \"creationOutput\" : {\n         \"additionalReference\" : \"00000014280000000134\",\n         \"externalReference\" : \"000000142800000000920000100001\"\n      },\n      \"payment\" : {\n         \"id\" : \"000000142800000000920000100001\",\n         \"paymentOutput\" : {\n            \"amountOfMoney\" : {\n               \"amount\" : 100,\n               \"currencyCode\" : \"USD\"\n            },\n            \"references\" : {\n               \"paymentReference\" : \"0\"\n            },\n            \"paymentMethod\" : \"card\",\n            \"cardPaymentMethodSpecificOutput\" : {\n               \"paymentProductId\" : 1\n            }\n         },\n         \"status\" : \"REJECTED\",\n         \"statusOutput\" : {\n            \"errors\" : [ {\n               \"code\" : \"430330\",\n               \"requestId\" : \"64357\",\n               \"message\" : \"Not authorised\"\n            } ],\n            \"isCancellable\" : false,\n            \"statusCode\" : 100,\n            \"statusCodeChangeDateTime\" : \"20160318170253\",\n            \"isAuthorized\" : false\n         }\n      }\n   }\n})
+  end
+
+  def invalid_json_response
+    '<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN"> 
+      <html><head> 
+        <title>502 Proxy Error</title> 
+      </head><body> 
+        <h1>Proxy Error</h1> 
+        <p>The proxy server received an invalid 
+            response from an upstream server.<br /> 
+            The proxy server could not handle the request <em><a href="/v1/9040/payments">POST&nbsp;/v1/9040/payments</a></em>.<p> 
+            Reason: <strong>Error reading from remote server</strong></p></p> 
+      </body></html>'
+  end
+
+  def invalid_json_plus_card_data
+    %q(<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN"> 
+      <html><head> 
+      <title>502 Proxy Error</title> 
+      </head></html>
+      opening connection to api-sandbox.globalcollect.com:443...
+      opened
+      starting SSL for api-sandbox.globalcollect.com:443...
+      SSL established
+      <- "POST //v1/1428/payments HTTP/1.1\r\nContent-Type: application/json\r\nAuthorization: GCS v1HMAC:96f16a41890565d0:Bqv5QtSXi+SdqXUyoBBeXUDlRvi5DzSm49zWuJTLX9s=\r\nDate: Tue, 15 Mar 2016 14:32:13 GMT\r\nAccept-Encoding: gzip;q=1.0,deflate;q=0.6,identity;q=0.3\r\nAccept: */*\r\nUser-Agent: Ruby\r\nConnection: close\r\nHost: api-sandbox.globalcollect.com\r\nContent-Length: 560\r\n\r\n"
+      <- "{\"order\":{\"amountOfMoney\":{\"amount\":\"100\",\"currencyCode\":\"USD\"},\"customer\":{\"merchantCustomerId\":null,\"personalInformation\":{\"name\":{\"firstName\":null,\"surname\":null}},\"billingAddress\":{\"street\":\"456 My Street\",\"additionalInfo\":\"Apt 1\",\"zip\":\"K1C2N6\",\"city\":\"Ottawa\",\"state\":\"ON\",\"countryCode\":\"CA\"}},\"contactDetails\":{\"emailAddress\":null}},\"cardPaymentMethodSpecificInput\":{\"paymentProductId\":\"1\",\"skipAuthentication\":\"true\",\"skipFraudService\":\"true\",\"card\":{\"cvv\":\"123\",\"cardNumber\":\"4567350000427977\",\"expiryDate\":\"0917\",\"cardholderName\":\"Longbob Longsen\"}}}"
+      -> "HTTP/1.1 201 Created\r\n"
+      -> "Date: Tue, 15 Mar 2016 18:32:14 GMT\r\n"
+      -> "Server: Apache/2.4.16 (Unix) OpenSSL/1.0.1p\r\n"
+      -> "Location: https://api-sandbox.globalcollect.com:443/v1/1428/payments/000000142800000000300000100001\r\n"
+      -> "X-Powered-By: Servlet/3.0 JSP/2.2\r\n"
+      -> "Connection: close\r\n"
+      -> "Transfer-Encoding: chunked\r\n"
+      -> "Content-Type: application/json\r\n"
+      -> "\r\n"
+      -> "457\r\n")
+  end
+
+  def scrubbed_invalid_json_plus
+    "Invalid response received from the Ingenico ePayments (formerly GlobalCollect) API.  Please contact Ingenico ePayments if you continue to receive this message.  (The raw response returned by the API was \"<!DOCTYPE HTML PUBLIC \\\"-//IETF//DTD HTML 2.0//EN\\\"> \\n      <html><head> \\n      <title>502 Proxy Error</title> \\n      </head></html>\\n      opening connection to api-sandbox.globalcollect.com:443...\\n      opened\\n      starting SSL for api-sandbox.globalcollect.com:443...\\n      SSL established\\n      <- \\\"POST //v1/1428/payments HTTP/1.1\\\\r\\\\nContent-Type: application/json\\\\r\\\\nAuthorization: [FILTERED]\\\\r\\\\nDate: Tue, 15 Mar 2016 14:32:13 GMT\\\\r\\\\nAccept-Encoding: gzip;q=1.0,deflate;q=0.6,identity;q=0.3\\\\r\\\\nAccept: */*\\\\r\\\\nUser-Agent: Ruby\\\\r\\\\nConnection: close\\\\r\\\\nHost: api-sandbox.globalcollect.com\\\\r\\\\nContent-Length: 560\\\\r\\\\n\\\\r\\\\n\\\"\\n      <- \\\"{\\\\\\\"order\\\\\\\":{\\\\\\\"amountOfMoney\\\\\\\":{\\\\\\\"amount\\\\\\\":\\\\\\\"100\\\\\\\",\\\\\\\"currencyCode\\\\\\\":\\\\\\\"USD\\\\\\\"},\\\\\\\"customer\\\\\\\":{\\\\\\\"merchantCustomerId\\\\\\\":null,\\\\\\\"personalInformation\\\\\\\":{\\\\\\\"name\\\\\\\":{\\\\\\\"firstName\\\\\\\":null,\\\\\\\"surname\\\\\\\":null}},\\\\\\\"billingAddress\\\\\\\":{\\\\\\\"street\\\\\\\":\\\\\\\"456 My Street\\\\\\\",\\\\\\\"additionalInfo\\\\\\\":\\\\\\\"Apt 1\\\\\\\",\\\\\\\"zip\\\\\\\":\\\\\\\"K1C2N6\\\\\\\",\\\\\\\"city\\\\\\\":\\\\\\\"Ottawa\\\\\\\",\\\\\\\"state\\\\\\\":\\\\\\\"ON\\\\\\\",\\\\\\\"countryCode\\\\\\\":\\\\\\\"CA\\\\\\\"}},\\\\\\\"contactDetails\\\\\\\":{\\\\\\\"emailAddress\\\\\\\":null}},\\\\\\\"cardPaymentMethodSpecificInput\\\\\\\":{\\\\\\\"paymentProductId\\\\\\\":\\\\\\\"1\\\\\\\",\\\\\\\"skipAuthentication\\\\\\\":\\\\\\\"true\\\\\\\",\\\\\\\"skipFraudService\\\\\\\":\\\\\\\"true\\\\\\\",\\\\\\\"card\\\\\\\":{\\\\\\\"cvv\\\\\\\":\\\\\\\"[FILTERED]\\\\\\\",\\\\\\\"cardNumber\\\\\\\":\\\\\\\"[FILTERED]\\\\\\\",\\\\\\\"expiryDate\\\\\\\":\\\\\\\"0917\\\\\\\",\\\\\\\"cardholderName\\\\\\\":\\\\\\\"Longbob Longsen\\\\\\\"}}}\\\"\\n      -> \\\"HTTP/1.1 201 Created\\\\r\\\\n\\\"\\n      -> \\\"Date: Tue, 15 Mar 2016 18:32:14 GMT\\\\r\\\\n\\\"\\n      -> \\\"Server: Apache/2.4.16 (Unix) OpenSSL/1.0.1p\\\\r\\\\n\\\"\\n      -> \\\"Location: https://api-sandbox.globalcollect.com:443/v1/1428/payments/000000142800000000300000100001\\\\r\\\\n\\\"\\n      -> \\\"X-Powered-By: Servlet/3.0 JSP/2.2\\\\r\\\\n\\\"\\n      -> \\\"Connection: close\\\\r\\\\n\\\"\\n      -> \\\"Transfer-Encoding: chunked\\\\r\\\\n\\\"\\n      -> \\\"Content-Type: application/json\\\\r\\\\n\\\"\\n      -> \\\"\\\\r\\\\n\\\"\\n      -> \\\"457\\\\r\\\\n\\\"\")"
   end
 end
